@@ -3,7 +3,6 @@ package com.nhnacademy.bookstoreback.category.repository.impl;
 import static com.nhnacademy.bookstoreback.category.domain.entity.QCategory.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.nhnacademy.bookstoreback.category.domain.dto.respnse.CategorySearchResult;
 import com.nhnacademy.bookstoreback.category.repository.CustomCategoryRepository;
@@ -12,15 +11,15 @@ import com.querydsl.jpa.impl.JPAQueryFactory;
 import jakarta.persistence.EntityManager;
 
 public class CustomCategoryRepositoryImpl implements CustomCategoryRepository {
-
-
 	private final JPAQueryFactory queryFactory;
 
 	public CustomCategoryRepositoryImpl(EntityManager em) {
 		this.queryFactory = new JPAQueryFactory(em);
 	}
 
-
+	/**
+	 *{@inheritDoc}
+	 */
 	@Override
 	public List<CategorySearchResult> findCategoriesByPartialName(String name) {
 		return queryFactory
@@ -30,6 +29,6 @@ public class CustomCategoryRepositoryImpl implements CustomCategoryRepository {
 			.fetch()
 			.stream()
 			.map(c -> new CategorySearchResult(c.get(category.categoryId), c.get(category.categoryName)))
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
